--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "sass": "^1.26.10",
         "sass-loader": "^9.0.2",
+        "smart-grid": "^2.1.2",
         "style-loader": "^1.2.1",
         "terser-webpack-plugin": "^3.0.6",
         "vue-loader": "^15.9.3",
