--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "dependencies": {
         "@babel/polyfill": "^7.10.4",
         "node-sass": "^4.14.1",
+        "normalize.css": "^8.0.1",
         "vue": "^2.6.11"
     }
 }
