--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "node-sass": "^4.14.1",
         "normalize.css": "^8.0.1",
         "vue": "^2.6.11",
+        "vue-router": "^3.3.4",
         "vuex": "^3.5.1"
     }
 }
