--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "normalize.css": "^8.0.1",
         "vue": "^2.6.11",
         "vue-router": "^3.3.4",
-        "vuex": "^3.5.1"
+        "vuex": "^3.5.1",
+        "vuex-persistedstate": "^3.0.1"
     }
 }
