--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "scripts": {
         "dev": "webpack-dev-server --mode development",
         "build": "webpack --mode production",
-        "production": "webpack-dev-server --mode production"
+        "production": "cross-env BASE_URL=http://localhost:3000/ NODE_ENV=production node server/index.js",
+        "start": "cross-env NODE_ENV=production node server/index.js",
+        "heroku-postbuild": "npm run build"
+    },
+    "engines": {
+        "node": "11.x"
     },
     "keywords": [
         "vue",
@@ -45,11 +50,17 @@
     },
     "dependencies": {
         "@babel/polyfill": "^7.10.4",
+        "experss": "0.0.1-security",
         "node-sass": "^4.14.1",
         "normalize.css": "^8.0.1",
         "vue": "^2.6.11",
         "vue-router": "^3.3.4",
         "vuex": "^3.5.1",
         "vuex-persistedstate": "^3.0.1"
-    }
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead"
+    ]
 }
