--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "normalize.css": "^8.0.1",
         "vue": "^2.6.11",
         "vue-router": "^3.3.4",
+        "vue-yandex-metrika": "^1.8.3",
         "vuex": "^3.5.1",
         "vuex-persistedstate": "^3.0.1"
     },
